Implement predecessor structure for more efficient lookups