@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.carrotsearch:jsuffixarrays:0.1.0'
     // https://mvnrepository.com/artifact/org.javatuples/javatuples
@@ -25,6 +26,10 @@ tasks.withType(JavaCompile).each {
 }
 
 tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
     jvmArgs += '--enable-preview'
 }
 
